k8s/test-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-app
  namespace: test
spec:
  replicas: 3
  selector:
    matchLabels:
      app: test-app
  template:
    metadata:
      labels:
        app: test-app
    spec:
      containers:
        - name: test
          image: ghcr.io/traefik/whoami:KUSTOMIZE_IMAGE_VERSION
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
