k8s/test-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-app
  namespace: ingress
spec:
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 80
  selector:
    app: test-app
